2006-05-16  Marco Baringer  <mb@bese.it>

	* slime.el (slime-repl-return-behaviour): New variable which
	controls slime-repl-return's heaviour.
	(slime-repl-return): Respect slime-repl-return-behaviour.

2006-05-14  Marco Baringer  <mb@bese.it>

	* slime.el (slime-macroexpansion-minor-mode-map): Rebind 'undo' to
	set buffer-read-only temporarily to t.
	(slime-repl-return): Only send repl input if point is past a
	complete form.

2006-05-12  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank.lisp (update-indentation-information): Fix for problem
	with Allegro CL 8.0: If I type M-x slime-update-indentation,
	Allegro CL starts growing until it hits a STORAGE-CONDITION or
	even segfaults.

2006-05-04  Matthias Koeppe  <mkoeppe@mail.math.uni-magdeburg.de>

	* swank-allegro.lisp (fspec-definition-locations): Handle
	:top-level-form entries that appear in backtraces.

2006-04-20  Marco Baringer  <mb@bese.it>

	* swank-openmcl.lisp (toggle-trace): Implemented. Currently only
	provides 'best effort' support, :labels and :flet are ignored,
	:defmethod and :call are treated like a normal trace of the
	operator.

2006-04-20  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*use-dedicated-output-stream*): Make it nil by
	default to avoid race conditions.

2006-04-19  Christophe Rhodes <csr21@cam.ac.uk>

	* doc/Makefile (contributors.texi): use texinfo macros for
	accented characters.

	* ChangeLog: canonize Gabor Melis' spelling, otherwise he appears
	twice in the "Hackers of the good Hack table"

	* doc/slime.texi (nyorsko): delete
	(EDITION): make it say 2.0
	
2006-04-19  Christophe Rhodes <csr21@cam.ac.uk>

	* swank.lisp (decoded-arglist-to-string): if the keyword and the
	variable are different, print the keyword name with escapes.
	(encode-keyword-arg): get the keyword and the arg-name the same
	way round as in lambda lists.
	(appliable-methods-keywords): use
	swank-mop:compute-applicable-methods-using-classes and